test/fail/missing_semicolon.j
class A {
  Void main() {
    return "aaaaaaaa"
  }
}
